test_scripts/errors/trailing_slash_eof.stderr
Parse Error:
 1 | let x = 1 /
               ^
Error: Unexpected `EOF` in parse_primary
Failed to parse script
